--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+:root {
+}
+
 /* GLOBAL */
 html {
   box-sizing: border-box;
@@ -6,7 +9,7 @@ html {
 }
 
 *,
-*::before ,
+*::before,
 *::after {
   box-sizing: inherit;
 }
@@ -17,7 +20,7 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
-  font-family: 'Arial', sans-serif;
+  font-family: "Arial", sans-serif;
   font-size: 16px;
   line-height: 1.5;
   background-color: #fff;
@@ -28,7 +31,6 @@ img {
   max-width: 100%;
   height: auto;
 }
-
 
 /* CONTAINER */
 .container {
